clarity, naming, line breaks