@@ -1,16 +1,19 @@
 package org.smartregister.commonregistry;
 
+import android.support.annotation.NonNull;
+
 import org.smartregister.view.contract.SmartRegisterClient;
 import org.smartregister.view.contract.SmartRegisterClients;
 import org.smartregister.view.dialog.SortOption;
 
 import java.util.Collections;
 import java.util.Comparator;
+import java.util.Map;
 
 /**
  * Created by Raihan Ahmed on 3/22/15.
  */
-public class CommonObjectSort implements SortOption {
+class CommonObjectSort implements SortOption {
 
 
     private String field;
@@ -21,14 +24,14 @@ public class CommonObjectSort implements SortOption {
         byColumn, byDetails
     }
 
-    public CommonObjectSort(ByColumnAndByDetails byColumnAndByDetailsArg,
-                            boolean isintegerArg,
-                            String fieldArg,
-                            String sortOptionName) {
-        this.byColumnAndByDetails = byColumnAndByDetailsArg;
-        this.isInteger = isintegerArg;
-        this.field = fieldArg;
-        this.sortOptionName = sortOptionName;
+    CommonObjectSort(ByColumnAndByDetails byColumnAndByDetailsArg,
+                     boolean isIntegerArg,
+                     String fieldArg,
+                     String sortOptionNameArg) {
+        byColumnAndByDetails = byColumnAndByDetailsArg;
+        isInteger = isIntegerArg;
+        field = fieldArg;
+        sortOptionName = sortOptionNameArg;
     }
 
     @Override
@@ -38,54 +41,52 @@ public class CommonObjectSort implements SortOption {
 
     @Override
     public SmartRegisterClients sort(SmartRegisterClients allClients) {
-        Collections.sort(allClients, commoncomparator);
+        Collections.sort(allClients, commonComparator);
         return allClients;
     }
 
-    Comparator<SmartRegisterClient> commoncomparator = new Comparator<SmartRegisterClient>() {
+    private Comparator<SmartRegisterClient> commonComparator = new Comparator<SmartRegisterClient>() {
         @Override
-        public int compare(SmartRegisterClient oneClient, SmartRegisterClient anotherClient2) {
-            CommonPersonObjectClient commonPersonObjectClient =
-                    (CommonPersonObjectClient) oneClient;
-            CommonPersonObjectClient commonPersonObjectClient2 =
-                    (CommonPersonObjectClient) anotherClient2;
+        public int compare(SmartRegisterClient smartRegisterClient, SmartRegisterClient smartRegisterClient2) {
+            CommonPersonObjectClient client = (CommonPersonObjectClient) smartRegisterClient;
+            CommonPersonObjectClient client2 = (CommonPersonObjectClient) smartRegisterClient2;
+
             switch (byColumnAndByDetails) {
                 case byColumn:
-                    if (!isInteger) {
-                        return ((commonPersonObjectClient.getColumnmaps().get(field) != null
-                                ? commonPersonObjectClient.getColumnmaps().get(field) : "")).
-                                trim().
-                                toLowerCase().
-                                compareTo((commonPersonObjectClient2.getColumnmaps().
-                                get(field) != null ? commonPersonObjectClient2.getColumnmaps().
-                                get(field) : "").trim().toLowerCase());
+                    String columnFieldValue = getFieldValue(client, isInteger, false);
+                    String columnFieldValue2 = getFieldValue(client2, isInteger, false);
 
+                    if (!isInteger) {
+                        return columnFieldValue.compareTo(columnFieldValue2);
                     } else {
-                        return (new Integer(
-                                commonPersonObjectClient.getColumnmaps().get(field) != null
-                                        ? commonPersonObjectClient.getColumnmaps().
-                                        get(field) : "0")).
-                                compareTo(new Integer(commonPersonObjectClient2.getColumnmaps().
-                                        get(field) != null ? commonPersonObjectClient2.
-                                        getColumnmaps().get(field) : "0"));
+                        return Integer.valueOf(columnFieldValue).compareTo(
+                                Integer.valueOf(columnFieldValue2));
 
                     }
                 case byDetails:
+                    String detailFieldValue = getFieldValue(client, isInteger, true);
+                    String detailFieldValue2 = getFieldValue(client2, isInteger, true);
+
                     if (!isInteger) {
-                        return ((commonPersonObjectClient.getDetails().get(field) != null
-                                ? commonPersonObjectClient.getDetails().get(field) : "")).
-                                trim().toLowerCase().compareTo((commonPersonObjectClient2.
-                                getDetails().get(field) != null ? commonPersonObjectClient2.
-                                getDetails().get(field) : "").trim().toLowerCase());
+                        return detailFieldValue.compareTo(detailFieldValue2);
                     } else {
-                        return (new Integer(commonPersonObjectClient.getDetails().get(field) !=
-                                null ? commonPersonObjectClient.getDetails().get(field) : "0").
-                                compareTo(new Integer(commonPersonObjectClient2.getDetails().
-                                        get(field) != null ? commonPersonObjectClient2.
-                                        getDetails().get(field) : "0")));
+                        return Integer.valueOf(detailFieldValue).compareTo(
+                                Integer.valueOf(detailFieldValue2));
                     }
             }
             return 0;
         }
     };
+
+    @NonNull
+    private String getFieldValue(CommonPersonObjectClient commonPersonObjectClient,
+                                 boolean isInteger,
+                                 boolean isDetails) {
+        String defaultValue = isInteger ? "0" : "";
+        Map<String, String> valueMap = isDetails ? commonPersonObjectClient.getDetails()
+                : commonPersonObjectClient.getColumnmaps();
+        String detailsFieldValue = valueMap.get(field);
+
+        return (detailsFieldValue != null ? detailsFieldValue : defaultValue).trim().toLowerCase();
+    }
 }
